# laplacian_thickness

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  ParseArgv.c  aclocal.m4  autogen.sh  computational_area.cc  computational_area.h  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  corticalMantle.cc  corticalMantle.h  corticalMantle_utilities.cc  cortical_mantle.cc  cortical_mantle.h  createMantle.cc  create_laplace_volume.cc  create_mantle.cc  doxygen_config  epm-header.in  jplPoint.cc  jplPoint.h  jplPointMap.cc  jplPointMap.h  laplace_initialisation.c  laplacianGrid.cc  laplacianGrid.h  laplacianGrid.h~  laplacian_initialisation.pl  regen.sh  relax_mantle.cc  (+9 more)
.deps/: ParseArgv.P  computational_area.P  cortical_mantle.P  create_mantle.P  jplPoint.P  jplPointMap.P  relax_mantle.P  stl_map_test.P
linear_thickness/: Makefile.am  layered_surfaces.cc  normal_thickness.cc  surface_functions.cc  surface_functions.h
matlab/: laplace_euler.m  laplace_gradient.m  laplace_pathlength.m  laplace_prepare_grid.m  laplace_thickness.m  solve_laplace2.m
scripts/: Makefile.am  laplacian_initialisation.in  laplacian_initialisation.pl
src/: Makefile.am  createLaplacianGrid.c  createLaplacianGrid.h  createLaplacianGrid_main.c  laplacian2DGrid.cc  laplacian2DGrid.h  laplacianGrid.cc  laplacianGrid.h  laplacianThickness.cc  solveLaplacianGrid.cc  vertexStats.cc
