bin_PROGRAMS = laplace_initialisation laplacian_thickness_volume two_objects_evaluate vertex_stats

vertex_stats_SOURCES = surfaceStats.cc

laplace_initialisation_SOURCES = laplace_initialisation.c

laplacian_thickness_volume_SOURCES = solveLaplace.cc laplacianGrid.cc ParseArgv.c

two_objects_evaluate_SOURCES = two_objects_evaluate.c


